--- a/src/localization/pl/main.json
+++ b/src/localization/pl/main.json
@@ -1,6 +1,7 @@
 {
   "logo": "Projekt ReactNative Szczerbiny",
   "registration": "Rejestracja",
+  "registerAs": "Zarejestruj się",
   "registerWith": "Zarejestruj się z",
   "signInWith": "Zaloguj się przez",
   "information": "Informacje",
@@ -15,8 +16,17 @@
   "termsAndConditions": "Warunkami",
   "privacyPolicy": "Polityką prywatności",
   "logIn": "Zaloguj się",
-  "DontHaveAnAccount": "Nie masz konta?",
+  "loginPlaceholder": "Email lub login",
+  "dontHaveAnAccount": "Nie masz konta?",
   "language": "pl",
   "chooseCountry": "Wybierz swój kraj",
-  "agree": "zgadzam się z"
+  "agree": "zgadzam się z",
+  "forgotPass": "Zapomniałeś hasła",
+  "a": "",
+  "an": "jako",
+  "signIn": "Zaloguj się",
+  "signUp": "Zarejestruj się",
+  "forecast": "Prognoza",
+  "finance": "Finanse",
+  "favourites":  "Ulubione"
 }
