added and plugged shared library, locales was changed, errors was translated, also added some types for navigations

--- a/src/localization/en/main.json
+++ b/src/localization/en/main.json
@@ -28,5 +28,8 @@
   "signUp": "SignUp",
   "forecast": "Forecast",
   "finance": "Finance",
-  "favourites":  "Favourites"
+  "favourites":  "Favourites",
+  "en": "English",
+  "uk":"Ukrainian",
+  "pl": "Polish"
 }
