--- a/src/localization/uk/main.json
+++ b/src/localization/uk/main.json
@@ -28,5 +28,8 @@
   "signUp": "Реєстрація",
   "forecast": "Прогноз",
   "finance": "Фінанси",
-  "favourites":  "Улюблене"
+  "favourites":  "Улюблене",
+  "en": "Англійська",
+  "uk":"Українська",
+  "pl": "Польська"
 }
