--- a/src/localization/uk/sub.json
+++ b/src/localization/uk/sub.json
@@ -1,24 +1,17 @@
 {
-  "must": "повинен",
-  "contain": "містити",
-  "and": "та",
-  "cant": "не може",
-  "min": "мін",
-  "max": "макс",
-  "symbols": "символів",
-  "required": "обов'язково",
-  "only": "тільки",
-  "letters": "літер",
-  "numbers": "чисел",
-  "too": "Дуже",
-  "short": "Коротко",
-  "long": "Довжина перевищена",
-  "not": "не",
-  "more": "більше",
-  "than": "ніж",
-  "less": "меньше",
-  "doNotMatch": "не співпадають",
-  "mustMatch": "повинні співпадати",
-  "checkboxTerms": "Умови повинні бути прийняті."
+  "emailMatches": "Email повинен містити @ i не може містити: <, >, [, ], :, ;",
+  "emailMin": "* Не менше 6 символів",
+  "required": "Необхідне",
+  "passwordMin": "Занадто малий, пароль має містити щонайменше 8 символів!",
+  "passwordMax": "Занадто довгий, пароль має містити щонайбільше 20 символів!",
+  "passwordMatches": "Пароль має містити літери(A-z), цифри, спеціальни символи",
+  "userNameMin": "* мін 4 символа",
+  "userNameMax": "* макс 12 символів",
+  "userNameMatches": "username має містити літери та цифри",
+  "nameMin": "* мін 2 символа",
+  "nameMax": "* макс 15 символів",
+  "nameMatches": "Ім'я має містити тільки літери",
+  "passConfirmNOT": "Ваші паролі не співпадають",
+  "passConfirmMessage": "Паролі повинні співпадати",
+  "agree": "Правила повинні бути прийняті."
 }
-
