--- a/src/localization/pl/sub.json
+++ b/src/localization/pl/sub.json
@@ -1,23 +1,17 @@
 {
-  "must": "musi",
-  "contain": "zawierać",
-  "and": "i",
-  "cant": "nie może",
-  "min": "min",
-  "max": "maks",
-  "symbols": "symbole",
-  "required": "wymagany",
-  "only": "tylko",
-  "letters": "litery",
-  "numbers": "liczby",
-  "too": "bardzo",
-  "short": "Krótki",
-  "long": "Długość przekroczona",
-  "not": "nie",
-  "more": "więcej",
-  "than": "niż",
-  "less": "mniej",
-  "doNotMatch": "nie pasuje",
-  "mustMatch": "musi pasować",
-  "checkboxTerms": "Warunki muszą zostać zaakceptowane."
+  "emailMatches": "Email musi zawierać @ i nie może zawierać: <, >, [, ], :, ;",
+  "emailMin": "* Co najmniej 6 symboli",
+  "required": "Niezbędne",
+  "passwordMin": "Za małe, hasło musi zawierać co najmniej 8 symboli!",
+  "passwordMax": "Za długe, hasło musi zawierać nie więcej za 20 symboli!",
+  "passwordMatches": "hasło musi zawierać litery(A-z), liczby, specjalnie symboli",
+  "userNameMin": "* min 4 symboli",
+  "userNameMax": "* max 12 symboli",
+  "userNameMatches": "username musi zawierać tylko litery oraz liczby",
+  "nameMin": "* min 2 symboli",
+  "nameMax": "* max 15 symboli",
+  "nameMatches": "imię musi zawierać tylko litery",
+  "passConfirmNOT": "Twoje hasła nie pasują do siebie.",
+  "passConfirmMessage": "Hasła muszą pasować.",
+  "agree": "Regulamin musi zostać zaakceptowany."
 }
