DrawerNavigation.tsx has been finished

--- a/src/localization/en/main.json
+++ b/src/localization/en/main.json
@@ -18,7 +18,7 @@
   "logIn": "LogIn",
   "loginPlaceholder": "Email or login",
   "dontHaveAnAccount": "Don’t have an account?",
-  "language": "en",
+  "language": "\uD83C\uDDEC\uD83C\uDDE7",
   "chooseCountry": "Choose your Country",
   "agree": "I agree with",
   "forgotPass": "Forgot password",
