--- a/src/localization/pl/main.json
+++ b/src/localization/pl/main.json
@@ -18,7 +18,7 @@
   "logIn": "Zaloguj się",
   "loginPlaceholder": "Email lub login",
   "dontHaveAnAccount": "Nie masz konta?",
-  "language": "pl",
+  "language": "\uD83C\uDDF5\uD83C\uDDF1",
   "chooseCountry": "Wybierz swój kraj",
   "agree": "zgadzam się z",
   "forgotPass": "Zapomniałeś hasła",
