--- a/src/localization/uk/main.json
+++ b/src/localization/uk/main.json
@@ -18,7 +18,7 @@
   "logIn": "Увійти",
   "loginPlaceholder": "Email або логін",
   "dontHaveAnAccount": "Не має аккаунту?",
-  "language": "uk",
+  "language": "\uD83C\uDDFA\uD83C\uDDE6",
   "chooseCountry": "Обери свою країну",
   "agree": "Я згоден/згодна з",
   "forgotPass": "Не пам'ятаєш пароль",
