--- a/src/localization/uk/main.json
+++ b/src/localization/uk/main.json
@@ -31,5 +31,22 @@
   "favourites":  "Улюблене",
   "en": "Англійська",
   "uk":"Українська",
-  "pl": "Польська"
+  "pl": "Польська",
+  "uploadPhotosFor": "Додати фотографії для медіа використання",
+  "namePhoto": "Введіть назву фото",
+  "descPhoto": "Додайте опис",
+  "addPhotoBtn": "Додати фото",
+  "songName": "Париж під дощем",
+  "songAuthor": "Лаув",
+  "countryName": "США",
+  "privatInfo": "Особиста інформація",
+  "publicInfo": "Публічна інформація",
+  "occupation": "Заняття",
+  "webSocialLinks": "Веб-сайт і соціальні посилання",
+  "save": "Зберегти зміни",
+  "photos": "Фотографії",
+  "addLinkVideo": "Додати посилання на відео",
+  "profile": "МІЙ ПРОФІЛЬ",
+  "currentLanguage": "Мова",
+  "friend": "Запросити друзів"
 }
